# road-signs-detection

./: .gitignore  README.md  pyproject.toml  train.yaml
notebooks/: test.ipynb  train.ipynb  train_yolov5.ipynb  yolov5 (1).ipynb
src/: convert.py  model.py
web/: app.py
