[tool.poetry]
name = "road-signs-detection"
version = "0.1.0"
description = ""
authors = ["Artem Ponomarenko <slfdstrctd@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
