[tool.poetry]
name = "road-signs-detection"
version = "0.1.0"
description = "Road signs detection app"
authors = ["Artem Ponomarenko <slfdstrctd@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
jupyter = "^1.0.0"
torch = [
    { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp310-cp310-linux_x86_64.whl", platform = 'linux' },
    { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp310-cp310-win_amd64.whl", platform = 'windows' },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.1-cp310-none-macosx_10_9_x86_64.whl", platform = 'darwin' }
]
opencv-python = "^4.8.1.78"
utils = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
